# gnnepcsaft

./: .gitignore  .pylintrc  Dockerfile  Dockerfile_backup  ML-PC-SAFT.ipynb  PNAEPCSAFT.py  README.md  __init__.py  checking.ipynb  compare.ipynb  databuilder.ipynb  debug.ipynb  demo.ipynb  dipole_calc.py  epcsaft.py  epcsaft_complete.py  epcsaft_cython.py  evalmodel.ipynb  evalmodels.ipynb  evalpara.ipynb  evalref.ipynb  evaluate.py  families.ipynb  graph.py  graphdataset.py  init_para.ipynb  install_pcsaft.sh  jraphdataloading.py  kernel-metadata.json  main.py  ml_pc_saft.py  model_deg.py  models.py  moleculargraphs.ipynb  para_training.ipynb  parameters.py  parametrisation.py  pcsaft_electrolyte.py  pcsaft_mse.py  pcsaftparadatabuild.ipynb  (+10 more)
.dvc/: config
.github/workflows/: pylint.yml  pypi.yml  training.yml
configs/: default.py
data/: __init__.py  graph.py  graphdataset.py  moleculargraphs.ipynb  molfamily.py  puredatadict.py
data/Habicht/: data.csv  data.xlsx
data/pcsaft_pck/: all_pcsaft_fluids.json
data/ramirez2022/: RAMIRES 2022.csv  RAMIREZ2022.csv
demo/: __init__.py  utils.py
epcsaft/: __init__.py  epcsaft_complete.py  epcsaft_cython.py  ml_pc_saft.py
eval/: evalmodel.ipynb  evalpara.ipynb  evaluate.py  evaluate_ensemble.py
evaluations/: evaluate_ensemble.py
gnnepcsaft/: __init__.py
gnnepcsaft/configs/: __init__.py  configs_parallel.py  default.py  default_assoc.py  gatv2_assoc.py  gatv2_assoc_2.py  (+23 more)
train/: init_para.ipynb  model_deg.py  models.py  parametrisation.py  train.py  tuner.py  utils.py
training/: model1_final.pth
(+76 files in other folders)
