[project]
name = "gnnepcsaft"
version = "0.1.7"
description = "GNNePCSAFT Project."
authors = [
    {name = "Wildson Lima"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
