[project]
name = "gnnepcsaft"
version = "0.2.6"
description = "GNNePCSAFT Project."
authors = [
    {name = "Wildson Lima"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feos (>=0.8.0,<0.9.0)",
    "rdkit (>=2024.9.6,<2025.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "si-units (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
